--- a/src/general/components/header/header.module.css
+++ b/src/general/components/header/header.module.css
@@ -37,4 +37,17 @@
     justify-content: center;
 }
 
+.rightSide p {
+    top: 24px;
+    left: 1275px;
+    width: 60px;
+    height: 18px;
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) var(--unnamed-font-size-16)/var(--unnamed-line-spacing-18) var(--unnamed-font-family-ubuntu);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-f8f8f8);
+    text-align: left;
+    opacity: 1;
+
+}
+
 
