--- a/src/general/components/header/header.module.css
+++ b/src/general/components/header/header.module.css
@@ -11,7 +11,7 @@
     height: 70px;
 
     /* UI Properties */
-    background: var(--unnamed-color-2ecc71) 0% 0% no-repeat padding-box;
+    background: var(--unnamed-color-2ecc71) 0 0 no-repeat padding-box;
     opacity: 1;
 }
 
@@ -34,7 +34,8 @@
 
 .rightSide {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .rightSide p {
