added input and 50% his styles

--- a/src/general/components/header/header.module.css
+++ b/src/general/components/header/header.module.css
@@ -7,7 +7,8 @@
     /* Layout Properties */
     top: 0;
     left: 0;
-    width: 1366px;
+    /*width: 1366px;*/
+    width: 1920px;
     height: 70px;
 
     /* UI Properties */
