--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   --unnamed-color-2b2d2f: #2B2D2F;
   --unnamed-color-d8d8d9: #D8D8D9;
   --unnamed-color-2ecc71: #2ECC71;
-  --unnamed-color-f8f8f8: #F8F8F8;
+  --unnamed-color-f8f8f8: #f8f8f8;
   --unnamed-color-b2b3b4: #B2B3B4;
   --unnamed-color-f0856b: #F0856B;
 
