--- a/src/general/components/header/header.module.css
+++ b/src/general/components/header/header.module.css
@@ -7,12 +7,21 @@
     /* Layout Properties */
     top: 0;
     left: 0;
-    width: 1920px;
+    width: 1366px;
     height: 70px;
 
     /* UI Properties */
     background: var(--unnamed-color-2ecc71) 0 0 no-repeat padding-box;
     opacity: 1;
+}
+
+.box > a {
+    text-decoration: none;
+}
+
+.box > a:hover > p,
+.box > a:hover > span {
+    color: var(--unnamed-color-f8f8f88e);
 }
 
 .leftSide {
@@ -34,23 +43,21 @@
 }
 
 .rightSide {
+    margin-right: 31px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 88px;
 }
 
 .logout {
-    /*!* Layout Properties *!*/
-    /*top: 28px;*/
-    /*left: 1247px;*/
-    /*width: 15px;*/
-    /*height: 13px;*/
-    /*!* UI Properties *!*/
-    /*font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 12px/15px var(--unnamed-font-family-font-awesome-5-pro);*/
-    /*letter-spacing: var(--unnamed-character-spacing-0);*/
-    /*color: var(--unnamed-color-f8f8f8);*/
-    /*text-align: left;*/
-    /*opacity: 1;*/
+    /* UI Properties */
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 12px/15px var(--unnamed-font-family-font-awesome-5-pro);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-f8f8f8);
+    text-align: left;
+    opacity: 1;
+
 }
 
 .rightSide p {
