--- a/src/general/components/sidebar/sidebarItem/sidebarItem.module.css
+++ b/src/general/components/sidebar/sidebarItem/sidebarItem.module.css
@@ -11,17 +11,25 @@
     margin-top: 5px;
     display: flex;
     align-items: center;
-    padding-left: 65px;
+    padding-left: 36px;
 }
 
-.box > span {
+.boxContent {
+    width: 100px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.boxContent > span {
     /* Layout Properties */
-    width: 52px;
-    height: 18px;
+    /*width: 52px;*/
+    /*height: 18px;*/
     /* UI Properties */
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) var(--unnamed-font-size-16)/var(--unnamed-line-spacing-18) var(--unnamed-font-family-ubuntu);
     letter-spacing: var(--unnamed-character-spacing-0);
     color: var(--unnamed-color-f8f8f8);
     text-align: left;
     opacity: 1;
+    margin-left: 13px;
 }
