--- a/src/general/components/header/search/search.module.css
+++ b/src/general/components/header/search/search.module.css
@@ -8,10 +8,6 @@
     left: 15px;
 }
 
-/*.box > label:focus-within .icon {*/
-/*    display: none;*/
-/*}*/
-
 .box > label > input[type='text'] {
     padding-left: 50px;
     /* Layout Properties */
@@ -42,8 +38,14 @@
     opacity: 1;
 }
 
+.box > label > input[type='text']:hover {
+    /*border: 1px solid var(--unnamed-color-25A65BBF);*/
+    box-shadow: 0 0 5px 1px var(--unnamed-color-25a65b99);
+}
+
 .box > label > input[type='text']:focus {
     outline: none;
+    box-shadow: 0 0 5px 1px var(--unnamed-color-25a65b99);
 }
 
 .box > label > input[type='text']:focus::placeholder {
