--- a/src/general/components/sidebar/sidebarItem/sidebarItem.module.css
+++ b/src/general/components/sidebar/sidebarItem/sidebarItem.module.css
@@ -3,9 +3,7 @@
     width: 225px;
     height: 40px;
     /* UI Properties */
-    background: var(--unnamed-color-2ecc71) 0 0 no-repeat padding-box;
-    opacity: 1;
-
+    background: rgba(46, 204, 113, 0.21) 0 0 no-repeat padding-box;
     border-radius: 0 25px 25px 0;
     margin-bottom: 5px;
     margin-top: 5px;
@@ -28,8 +26,20 @@
     /* UI Properties */
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) var(--unnamed-font-size-16)/var(--unnamed-line-spacing-18) var(--unnamed-font-family-ubuntu);
     letter-spacing: var(--unnamed-character-spacing-0);
-    color: var(--unnamed-color-f8f8f8);
     text-align: left;
     opacity: 1;
     margin-left: 13px;
+    color: var(--unnamed-color-2ecc71);
+}
+
+a {
+    text-decoration: none;
+}
+
+.active {
+    background: var(--unnamed-color-2ecc71) 0 0 no-repeat padding-box;
+}
+
+.active > .boxContent > span {
+    color: var(--unnamed-color-f8f8f8);
 }
