--- a/src/general/components/subheader/subheader.module.css
+++ b/src/general/components/subheader/subheader.module.css
@@ -6,4 +6,13 @@
     background: #3EB470 0 0 no-repeat padding-box;
     border-radius: 25px 25px 0 0;
     opacity: 1;
+
+    display: flex;
+    justify-content: end;
+    align-items: end;
+}
+
+.subheadBox > form > select {
+    margin-bottom: 9px;
+    margin-right: 37px;
 }
