--- a/src/general/components/header/header.module.css
+++ b/src/general/components/header/header.module.css
@@ -28,7 +28,7 @@
     align-items: center;
 }
 
-.leftSide img {
+.leftSide > .header_logo {
     margin: 18px 19px;
     /* Layout Properties */
     width: 165px;
