--- a/src/general/components/subheader/subheader.module.css
+++ b/src/general/components/subheader/subheader.module.css
@@ -18,18 +18,7 @@
     margin-top: 15.5px;
     display: flex;
     height: 100%;
-}
-
-.line {
-    /* Layout Properties */
-    width: 0;
-    height: 100%;
-    /* UI Properties */
-    border: 0.5px solid rgba(112, 112, 112, 0.29);
-    opacity: 1;
-    margin-right: 27px;
-}
-
-.content {
-    margin-top: 10px;
+    border-left: 0.5px solid #707070;
+    padding-left: 27px;
+    padding-top: 10px;
 }
