fixed logic svg and draft for user content

--- a/src/modules/active/presentation/components/entityHuman/entityHuman.module.css
+++ b/src/modules/active/presentation/components/entityHuman/entityHuman.module.css
@@ -3,8 +3,32 @@
     flex-direction: column;
     align-items: start;
     border-bottom: 0.5px solid #707070;
+
 }
 .header {
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+.header > div {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+.name {
+    margin-left: 5px;
+    /* UI Properties */
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold) var(--unnamed-font-size-16)/var(--unnamed-line-spacing-18) var(--unnamed-font-family-ubuntu);
+    letter-spacing: var(--unnamed-character-spacing-0);
+    color: var(--unnamed-color-2b2d2f);
+    text-align: left;
+    opacity: 1;
+}
+
+.body {
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
 }
