--- a/src/general/components/humanCard/humanCard.module.css
+++ b/src/general/components/humanCard/humanCard.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: start;
     border-bottom: 0.5px solid #707070;
+    padding-bottom: 11px;
 
 }
 .header {
@@ -28,7 +29,20 @@
 }
 
 .body {
+    margin-left: 16px;
+    margin-top: 12px;
     width: 30%;
     display: flex;
     justify-content: space-between;
+}
+
+.block > p,
+.block > div,
+.block > div > p {
+    display: flex;
+    align-items: center;
+}
+
+.right {
+    width: 25%;
 }
