--- a/src/general/components/humanCard/humanCard.module.css
+++ b/src/general/components/humanCard/humanCard.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: start;
     border-bottom: 0.5px solid #707070;
-    padding-bottom: 11px;
+    padding: 11px 0;
 
 }
 .header {
