--- a/src/general/components/subheader/subheader.module.css
+++ b/src/general/components/subheader/subheader.module.css
@@ -20,5 +20,5 @@
     height: 100%;
     border-left: 0.5px solid #707070;
     padding-left: 27px;
-    padding-top: 10px;
+    /*padding-top: 10px;*/
 }
